# devreel

./: CLAUDE.md  next.config.ts  package.json
src/: App.tsx  index.html  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/caption/: mod.rs  whisper.rs
src-tauri/src/encoder/: ffmpeg.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Camera.tsx  CaptionOverlay.tsx  CodeBlock.tsx  CustomCursor.tsx  Editor.tsx  ExportButton.tsx  GitHubStar.tsx  Preview.tsx  SceneRenderer.tsx  SidePanel.tsx  Sidebar.tsx  Timeline.tsx  Whiteboard.tsx
src/components/backgrounds/: Blackboard.tsx  Circuit.tsx  CodeEditor.tsx  Gradient.tsx  Grid3D.tsx  Space.tsx  Terminal.tsx
src/engine/: animator.ts  parser.ts  renderer.ts
src/hooks/: useEngine.ts  useFFmpeg.ts  useRecorder.ts  useSpeech.ts
src/lib/: highlight.ts
src/store/: index.ts
src/types/: schema.ts
