[package]
name = "devreel"
version = "0.1.0"
description = "A Tauri App"
authors = ["suryanox"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
image = "0.25"
log = "0.4"
env_logger = "0.11"


[lib]
name = "devreel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
